예매 Request 내 좌석 count만큼 예매 데이터가 생성되도록 (예매하도록) 구현